--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  h2 {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 
 .App-header {
   background-color: #282c34;
@@ -33,6 +34,6 @@
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(45deg);
   }
 }
