--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 .App-link {
   color: #61dafb;
 }
-
+/*
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -41,3 +41,4 @@
     transform: rotate(45deg);
   }
 }
+*/
